<resources>
    <string name="app_name">Megamix Player</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_library">Library</string>
    <string name="playlist">Playlists</string>
    <string name="stream">Streams</string>
    <string name="memory">Folders</string>
    <string name="add">Add</string>
    <string name="playlist_name">Enter playlist name</string>
    <string name="path_to_playlist_textview">Choose playlist if it already exist</string>
    <string name="unknown_playlist" translatable="false"> </string>
    <string name="delete">Delete</string>
    <string name="add_to_order">In order</string>
    <string name="info">Info</string>
    <string name="info_artist">Artist</string>
    <string name="info_title">Title</string>
    <string name="info_bitrate">Bitrate</string>
    <string name="info_album">Album</string>
    <string name="info_duration">Duration</string>
    <string name="info_path">Path</string>
    <string name="find_in_memory">Find in memory</string>
    <string name="tracks">"Tracks "</string>
    <string name="no_folders">Add your folders by pressing + button</string>
    <string name="no_playlists">Add your playlists by pressing + button</string>
    <string name="no_streams">Add your streams by pressing + button</string>
    <string name="no_tracks">Add your tracks by pressing + button</string>
    <string name="save">Save</string>
    <string name="save_original">Save origin.</string>
    <string name="foreign_playlist"> You can add foreign .M3U playlist by pressing + button</string>
    <string name="url_not_matches">Link must be started with "http(s)://" and contains address and domain</string>
    <string name="wrong_path">Can\'t play this track: wrong path</string>
    <string name="end_of_playlist">End of playlist</string>
    <string name="playlist_not_set">Choose playlist or folder</string>
    <string name="settings_interface">Interface</string>
    <string name="settings_sound">Sound</string>
    <string name="add_name">Name</string>
    <string name="add_url">URL</string>
    <string name="summary_silence">Player skips silence in the end of track</string>
    <string name="title_silence">Skip silence</string>
    <string name="title_crossfade">Length of Crossfade</string>
    <string name="summary_crossfade">Sets the next track playback position in the end of current track</string>
    <string name="summary_audiofocus">Audiofocus turn off/on sound when another application is going to play some sound</string>
    <string name="title_audiofocus">Turn Audiofocus on/off</string>
    <string name="total_duration">Total duration: </string>
    <string name="summary_fading">Make fading with crossfade </string>
    <string name="title_fading">Crossfade fading </string>
    <string name="dialog_delete">Delete </string>
    <string name="dialog_inOrder">Play next</string>
    <string name="dialog_info">Info</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_play">Play</string>
    <string name="successfully_added">Successfully added</string>
    <string name="successfully_removed">Successfully removed</string>
    <string name="dialog_add_to_playlist">Add to PL</string>
    <string name="choose_playlist">Choose playlist</string>
    <string name="playlists_not_found">Playlists not found. Add your playlist and try again</string>
    <string name="info_genre">Genre</string>
    <string name="info_location">Location</string>
    <string name="track_info">Track info</string>
    <string name="find">Find</string>
    <string name="playlist_is_empty">Playlist is empty</string>
    <string name="folder_is_empty">Folder is empty</string>
    <string name="all_tracks">All tracks</string>
    <string name="please_wait">Please wait&#8230; </string>
    <string name="applying_changes">Applying changes may take a few minutes.</string>
    <string name="tracks_not_displaying">Some tracks are not displayed because they have incorrect information. Please check your playlist.</string>
    <string name="title_slider_buffer">Slider buffer</string>
    <string name="summary_slider_buffer">Select how many slides should be stored in buffer</string>
    <string name="title_slider_animation">Slider animation</string>
    <string name="summary_slider_animation">Choose animation for slider</string>
    <string name="name_empty">Name can not be empty</string>
    <string name="db15" translatable="false">15db</string>
    <string name="minus_db15">-15db</string>
    <string name="loading">Loading&#8230;</string>
    <string name="coming_soon">Coming soon&#8230;</string>
    <string name="bass">Bass</string>
    <string name="preset">Preset</string>
    <string name="reset">Reset</string>
    <string name="enable">Enable</string>
    <string name="choose_preset">Choose preset</string>
    <string name="equalizer">Equalizer</string>
    <string name="volume">Volume</string>
    <string name="rated">Highly rated</string>
    <string name="add_foreign_playlist">Add foreign PL</string>
    <string name="add_playlist">Add playlist</string>
    <string name="title_themes">Themes</string>
    <string name="summary_themes">Choose theme</string>
    <string name="share">Share</string>
    <string name="action_exit">Exit</string>
    <string name="name_and_artist">Only name + artist</string>
    <string name="audio_file">Only audio file</string>
    <string name="name_and_file">Name + artist and audio file</string>
    <string name="send_with">Send with&#8230;</string>
    <string name="shared_by">Shared by Megamix Player</string>
    <string name="settings_other">Other</string>
    <string name="title_language">Language</string>
    <string name="summary_language">Choose language</string>
    <string name="parent_directory">Parent directory</string>
    <string name="crossfade">Crossfade</string>
    <string name="fading_works">Fading (With crossfade)</string>
    <string name="save_to">Save to PL</string>
    <string name="megamix" translatable="false">Megamix</string>
    <string name="permission_denied">Please save your playlist in your phone memory in case you want to change it</string>
    <string name="megamix_track">Megamix track</string>
    <string name="skip">Skip</string>
    <string name="not_available">Not available here</string>
    <string name="more">More</string>
    <string name="successfully_saved">Successfully saved</string>
    <string name="no_more_tracks">No more tracks</string>
    <string name="megamix_tracks">Megamix tracks</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="increase">Increase</string>
    <string name="title_pause_headset">Pause when disconnected</string>
    <string name="summary_pause_headset">Player will pause playing track in case headset/bluetooth disconnected</string>
    <string name="summary_start_headset">Start play when headset connected to phone(>=5.0 version)</string>
    <string name="title_start_headset">Play when plugged</string>
    <string name="summary_start_bluetooth">Start play when bluetooth device connected</string>
    <string name="title_start_bluetooth">Play when connected</string>
    <string name="summary_process_pressing">Turn on/off manage player by buttons on headset/etc.</string>
    <string name="title_process_pressing">Process pressing</string>
    <string name="headset_and_bluetooth">Headset/Bluetooth</string>
    <string name="summary_continue_after_call">Continue playing after phone call ended</string>
    <string name="title_continue_after_call">Continue after call</string>
    <string name="alert_title_success">Success</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_yes_button">Yes, please!</string>
    <string name="alert_no_button">No, thanks.</string>
    <string name="play_error">Unable to play this media file</string>
    <string name="start_marker" translatable="false">Start marker</string>
    <string name="end_marker" translatable="false">End marker</string>
    <string name="rewind" translatable="false">Rewind</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="ffwd" translatable="false">Fast forward</string>
    <string name="zoom_in" translatable="false">Zoom In</string>
    <string name="zoom_out" translatable="false">Zoom Out</string>
    <string name="save_button">Save</string>
    <string name="time_seconds">seconds</string>
    <string name="read_error">Error reading file</string>
    <string name="bad_extension_error" translatable="false">Sorry, Ringdroid is not yet able to edit files of type</string>
    <string name="no_extension_error" translatable="false">Sorry, Ringdroid can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string>
    <string name="progress_dialog_loading">Loading…</string>
    <string name="only_memory_tracks">Creator works with memory tracks only</string>
    <string name="track_not_changed">Track does not changed</string>
    <string name="total_duration_not_match">Total duration cannot be less 10 seconds</string>
    <string name="share_main">"Look, this is a new player with features, lying not in your. https://play.google.com/store/apps/details?id=com.merseyside.admin.exoplayer"</string>
    <string name="title_megamix_duration">Megamix duration</string>
    <string name="summary_megamix_duration">Choose megamix duration</string>
    <string name="action_about">About</string>
    <string name="load_prev_track_title">Load prev track(Megamix)</string>
    <string name="load_prev_track_summary">Automatically loading prev track in Megamix creator(Turn it off if your memory hardware is low)</string>
    <string name="load_next_track_title">Load next track(Megamix)</string>
    <string name="load_next_track_summary">Automatically loading next track in Megamix creator(Turn it off if your memory hardware is low)</string>
    <string name="lastfm" translatable="false">Last.fm</string>
    <string name="title_wifi">Wi-Fi</string>
    <string name="summary_wifi">Download last.fm covers only with wi-fi connection</string>
    <string name="title_start_category_lastfm">Start category Last.fm</string>
    <string name="summary_start_category_lastfm">This category shows initially in Last.fm</string>
    <string name="title_scrobble_lastfm">Scrobble Last.fm</string>
    <string name="summary_scrobble_lastfm">Scrobble tracks you listen in Megamix player</string>
    <string name="title_now_playing_lastfm">Now playing track</string>
    <string name="summary_now_playing_lastfm">Show on Last.fm currently playing track</string>
    <string name="title_recently_added">Recently added</string>
    <string name="summary_recently_added">How much days keep track in Recently added</string>
    <string name="summary_metadata">Get name and artist from track\'s metadata</string>
    <string name="title_metadata">Metadata</string>
    <string name="title_animation">Transition animation</string>
    <string name="summary_animation">Transition between application\'s fragments with animation</string>
    <string name="write_log_summary">Log can help to developer find and fix any errors</string>
    <string name="write_log_title">Write log</string>
    <string name="title_font">Font</string>
    <string name="summary_font">Select the font that will appear in the category and folder name</string>
    <string name="title_row_count">Number of tracks per line</string>
    <string name="summary_row_count">Choose how many tracks contains in one row in grid view</string>
    <string name="megamix_transition_title">Megamix transition</string>
    <string name="megamix_transition_summary">Choose transition effect (Megamix)</string>
</resources>