<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:entries="@array/megamix_duration_entries"
        android:entryValues="@array/megamix_duration_entry_values"
        android:key="megamix_duration"
        android:summary="@string/summary_megamix_duration"
        android:title="@string/title_megamix_duration"
        android:defaultValue="0">
    </ListPreference>

    <ListPreference
        android:entries="@array/megamix_transition_entries"
        android:entryValues="@array/megamix_transition_entry_values"
        android:key="transition"
        android:summary="@string/megamix_transition_summary"
        android:title="@string/megamix_transition_title"
        android:defaultValue="0">
    </ListPreference>

    <CheckBoxPreference
        android:key="load_prev_track"
        android:summary="@string/load_prev_track_summary"
        android:title="@string/load_prev_track_title"
        android:defaultValue="true">
    </CheckBoxPreference>

    <CheckBoxPreference
        android:key="load_next_track"
        android:summary="@string/load_next_track_summary"
        android:title="@string/load_next_track_title"
        android:defaultValue="true">
    </CheckBoxPreference>
</PreferenceScreen>